--- a/Block_Ref.html
+++ b/Block_Ref.html
@@ -35,7 +35,7 @@
 						<div class="ref-text">
 							<h2 lang-code="07013">.Automobilový priemysel</h2>
 							<span lang-code="07014">Plne automatizované bunky a linky pre automobilový priemysel</span>
-							<a href="indexRef.html#id-Block_Ref1" class="ref-button" lang-code="07019">Viac</a>
+							<a href="indexRef.html#id-Block_Ref1" class="ref-button" lang-code="07021">Viac</a>
 						</div>
 					</div>
 				</div>
@@ -45,7 +45,7 @@
 						<div class="ref-text">
 							<h2 lang-code="07011">.Letecký priemysel</h2>
 							<span lang-code="07012">.Vývoj a integrácia systémov pre letecký priemysel</span>
-							<a href="indexRef.html#id-Block_Ref2" class="ref-button" lang-code="07019">Viac</a>
+							<a href="indexRef.html#id-Block_Ref2" class="ref-button" lang-code="07021">Viac</a>
 						</div>
 					</div>
 					<div class="ref-p2">
@@ -63,7 +63,7 @@
 						<div class="ref-text">
 							<h2 lang-code="07017">.Všeobecné strojárstvo</h2>
 							<span lang-code="07018">.Jednoúčelové zariadenia a technologické celky na mieru</span>
-							<a href="indexRef.html#id-Block_Ref3" class="ref-button" lang-code="07019">Viac</a>
+							<a href="indexRef.html#id-Block_Ref3" class="ref-button" lang-code="07021">Viac</a>
 						</div>
 					</div>
 				</div>
@@ -73,7 +73,7 @@
 						<div class="ref-text">
 							<h2 lang-code="07015">.IT oblasť</h2>
 							<span lang-code="07016">.Automatizácia procesov, monitoring, a správa dát</span>
-							<a href="indexRef.html#id-Block_Ref4" class="ref-button" lang-code="07019">Viac</a>
+							<a href="indexRef.html#id-Block_Ref4" class="ref-button" lang-code="07021">Viac</a>
 						</div>
 					</div>
 					<div class="ref-p2">
@@ -81,6 +81,21 @@
 						<div class="ref-triangle"></div>
 					</div>
 				</div>
+
+				<div class="ref-col">
+					<div class="ref-p1">
+						<img src="media/ai-robot-interacting-with-futuristic-data-interface.avif" alt="Robot" />
+						<div class="ref-triangle"></div>
+					</div>
+					<div class="ref-t1">
+						<div class="ref-text">
+							<h2 lang-code="07019">.Robotika</h2>
+							<span lang-code="07020">.Automatizácia, robotika, simulácie, elektrický dizajn</span>
+							<a href="indexRef.html#id-Block_Ref5" class="ref-button" lang-code="07021">Viac</a>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</div>
