--- a/Block_Ref1.html
+++ b/Block_Ref1.html
@@ -59,6 +59,7 @@
 
 				<!-- ************************************************************************ -->
 				<div class="ref1-right">
+					
 					<div class="ref-tooltip-grid columns-3">
 
 						<div class="ref-tooltip-container">
@@ -75,7 +76,7 @@
 							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
 								<p>zváracie a polohovacie prípravky</p>
-								<div class="ref-tooltip-company">BMW</div>
+								<div class=""ref-tooltip-company>BMW</div>
 							</div>
 						</div>
 
@@ -170,7 +171,7 @@
 						</div>
 					</div>
 					<div style="text-align: right;">
-						<a href="#id_refMenu" lang-code="07020">Hore k menu</a>
+						<a href="#id_refMenu" lang-code="07022">Hore k menu</a>
 					</div>
 				</div>
 			</div>
