--- a/Block_Ref2.html
+++ b/Block_Ref2.html
@@ -24,7 +24,7 @@
 	<link rel="stylesheet" href="root.css">
 	<link rel="stylesheet" href="animator.css">
 	<link rel="stylesheet" href="ref2.css">
-	<link rel="stylesheet" href="ref-ovl.css">
+	<link rel="stylesheet" href="ref-tooltip.css">
 
 	<script src="Language.js" defer></script>
 	<script src="animator.js" defer></script>
@@ -51,22 +51,42 @@
 					<div class="ref-tooltip-grid columns-3">
 
 						<div class="ref-tooltip-container">
-								<img src="media/klienti/airbus-logo-enitech.png" alt="Airbus logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p></p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>interiérové komponenty lietadiel</p>
-									<div class="ref-tooltip-company">AIRBUS</div>
-								</div>
+							<img src="media/klienti/airbus-logo-enitech.png" alt="Airbus logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p></p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>interiérové komponenty lietadiel</p>
+								<div class="ref-tooltip-company">AIRBUS</div>
+							</div>
 						</div>
 
 						<div class="ref-tooltip-container">
-								<img src="media/klienti/siemens-logo-enitech.png" alt="SIEMENS logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>software pre letecký a kozmický priemysel </p>
-									<div class="ref-tooltip-company">SIEMENS</div>
-								</div>
+							<img src="media/klienti/siemens-logo-enitech.png" alt="SIEMENS logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>software pre letecký a kozmický priemysel </p>
+								<div class="ref-tooltip-company">SIEMENS</div>
+							</div>
 						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/SAB_aerospace-transp.png" alt="SAB AEROSPACE logo" class="ref-tooltip-image" 
+								style="top: 50%; bottom: auto; transform: translateY(-50%);" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>komponenty pre vesmírny priemysel</p>
+								<div class="ref-tooltip-company">SAB AEROSPACE</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/honeywell-logo-enitech.png" alt="Honeywell logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>aerospace</p>
+								<div class="ref-tooltip-company">Honeywell</div>
+							</div>
+						</div>
+
 					</div>
 				</div>
 
@@ -79,7 +99,7 @@
 						<!-- <img src="media/ai-generated-commercial-airplane-flying-through-the-clouds.avif" class="ref2-img1" /> -->
 					</div>
 					<div style="text-align: right;">
-						<a href="#id_refMenu" lang-code="07020">Hore k menu</a>
+						<a href="#id_refMenu" lang-code="07022">Hore k menu</a>
 					</div>
 				</div>
 
