--- a/Block_Ref4.html
+++ b/Block_Ref4.html
@@ -24,7 +24,7 @@
 	<link rel="stylesheet" href="root.css">
 	<link rel="stylesheet" href="animator.css">
 	<link rel="stylesheet" href="ref4.css">
-	<link rel="stylesheet" href="ref-ovl.css">
+	<link rel="stylesheet" href="ref-tooltip.css">
 
 	<script src="Language.js" defer></script>
 	<script src="animator.js" defer></script>
@@ -48,118 +48,156 @@
 			<div class="ref4-content-flex">
 				<!-- ************************************************************************ -->
 				<div class="ref4-right">
-					<div class="ref-ovl-grid columns-3">
+					<div class="ref-tooltip-grid columns-3">
 
 						<div class="ref-tooltip-container">
-								<img src="media/klienti/active-solution-logo-enitech.png" alt="Active Solution logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>vývoj softwaru pre rôzne oblasti</p>
+							<img src="media/klienti/active-solution-logo-enitech.png" alt="Active Solution logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>vývoj softwaru pre rôzne oblasti</p>
 								<div class="ref-tooltip-company">Active Solution</div>
-								</div>
-						</div>
-
-						<div class="ref-tooltip-container">
-								<img src="media/klienti/agrarmarkt-logo-transp.png" alt="Agrarmarkt logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>Software pre poľnohospodárske odvetvie</p>
-								<div class="ref-tooltip-company">Agrarmarkt</div>
-								</div>
-						</div>
-
-						<div class="ref-tooltip-container">
-								<img src="media/klienti/atos-logo-enitech.png" alt="Atos logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>software pre riadenie výroby mikročipov</p>
-								<div class="ref-tooltip-company">Atos</div>
-								</div>
-						</div>
-
-						<!-- <div class="ref-tooltip-container">
-								<img src="media/klienti/autodesk-logo-transp.png" alt="Autodesk logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>3D modeling software</p>
-								<div class="ref-tooltip-company">Autodesk INVENTOR</div>
-								</div>
-						</div> -->
-
-						<div class="ref-tooltip-container">
-								<img src="media/klienti/brz-logo-enitech.png" alt="BRZ logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>vývoj softwaru pre Rakúsku štátnu správu</p>
-								<div class="ref-tooltip-company">BRZ - Bundesrechenzentrum</div>
-								</div>
-						</div>
-
-						<div class="ref-tooltip-container">
-								<img src="media/klienti/cellent-logo-transp.png" alt="CELLENT logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>software v oblasti bankovníctva</p>
-								<div class="ref-tooltip-company">CELLENT</div>
-								</div>
-						</div>
-
-						<div class="ref-tooltip-container">
-								<img src="media/klienti/erste-logo-transp.png" alt="Erste logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>software v oblasti bankovníctva</p>
-								<div class="ref-tooltip-company">Erste</div>
-								</div>
-						</div>
-
-						<div class="ref-tooltip-container">
-								<img src="media/klienti/ferchau-logo-transp.png" alt="Ferchau logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>software v oblasti strojárenstva</p>
-								<div class="ref-tooltip-company">Ferchau</div>
-								</div>
-						</div>
-
-						<div class="ref-tooltip-container">
-								<img src="media/klienti/kuka-logo-enitech.png" alt="KUKA logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>robotické systémy</p>
-								<div class="ref-tooltip-company">KUKA</div>
-								</div>
-						</div>
-
-						<div class="ref-tooltip-container">
-								<img src="media/klienti/raiffeisen-bank-logo-enitech.png" alt="Reiffeisen logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>software v oblasti bankovníctva</p>
-								<div class="ref-tooltip-company">Reiffeisen</div>
-								</div>
-						</div>
-
-						<div class="ref-tooltip-container">
-								<img src="media/klienti/tenovis-logo-transp.png" alt="Tenovis logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>software v oblasti telekomunikácií</p>
-								<div class="ref-tooltip-company">Tenovis</div>
-								</div>
-						</div>
-
-						<div class="ref-tooltip-container">
-								<img src="media/klienti/unisys-logo-transp.png" alt="Unisys logo" class="ref-tooltip-image" />
-								<div class="ref-tooltip-text">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>Technologické riešenia</p>
-								<div class="ref-tooltip-company">Unisys</div>
-								</div>
 							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/agrarmarkt-logo-transp.png" alt="Agrarmarkt logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>Software pre poľnohospodárske odvetvie</p>
+								<div class="ref-tooltip-company">Agrarmarkt</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/atos-logo-enitech.png" alt="Atos logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>software pre riadenie výroby mikročipov</p>
+								<div class="ref-tooltip-company">Atos</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/brz-logo-enitech.png" alt="BRZ logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>vývoj softwaru pre Rakúsku štátnu správu</p>
+								<div class="ref-tooltip-company">BRZ - Bundesrechenzentrum</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/cellent-logo-transp.png" alt="CELLENT logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>software v oblasti bankovníctva</p>
+								<div class="ref-tooltip-company">CELLENT</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/erste-logo-transp.png" alt="Erste logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>software v oblasti bankovníctva</p>
+								<div class="ref-tooltip-company">Erste</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/ferchau-logo-transp.png" alt="Ferchau logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>software v oblasti strojárenstva</p>
+								<div class="ref-tooltip-company">Ferchau</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/raiffeisen-bank-logo-enitech.png" alt="Reiffeisen logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>software v oblasti bankovníctva</p>
+								<div class="ref-tooltip-company">Reiffeisen</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/tenovis-logo-transp.png" alt="Tenovis logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>software v oblasti telekomunikácií</p>
+								<div class="ref-tooltip-company">Tenovis</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/unisys-logo-transp.png" alt="Unisys logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>Technologické riešenia</p>
+								<div class="ref-tooltip-company">Unisys</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/Logo_PSAGroup_blue.png" alt="PSA CITROEN TRNAVA logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>Automatizácia uťahovania</p>
+								<div class="ref-tooltip-company">PSA CITROEN TRNAVA</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/skoda-logo-enitech.png" alt="Skoda logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>automatizačné výrobné linky</p>
+								<div class="ref-tooltip-company">Škoda Auto</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/AllianceLoundrySystems_logo_transp.png" alt="ALLIANCE LAUNDRY logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>programovanie robotickej bunky</p>
+								<div class="ref-tooltip-company">ALLIANCE LAUNDRY</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/Danfoss_logo-transp.png" alt="Danfoss logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>robotická bunka na čistenie komponentov</p>
+								<div class="ref-tooltip-company">Danfoss</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/FERAL_LOGO-transp.png" alt="Feral logo" class="ref-tooltip-image" 
+							style="height: 100%;"/>
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>doplnky CRM systému</p>
+								<div class="ref-tooltip-company">Feral</div>
+							</div>
+						</div>
+
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/tagueri-logo-transp.png" alt="Tagueri logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>Vývoj rozličných systémov pre Automotive</p>
+								<div class="ref-tooltip-company">Tagueri</div>
+							</div>
+						</div>
+
 					</div>
 					<div style="text-align: right;">
-						<a href="#id_refMenu" lang-code="07020">Hore k menu</a>
+						<a href="#id_refMenu" lang-code="07022">Hore k menu</a>
 					</div>
 				</div>
 
