--- a/Block_Uvod1.html
+++ b/Block_Uvod1.html
@@ -31,7 +31,7 @@
 					</p>
 					<div class="uvod1-contact-button-wrapper">
 						<button class="uvod1-contact-button" onclick="location.href='indexKontakt.html'" lang-code="00128">Napíšte nám</button>
-						<button class="uvod1-contact-button" onclick="location.href='indexKontakt.html#id-kontakt-Deak,id-kontakt-Kracala,id-kontakt-Ivaska'" lang-code="00129">Zavolajte</button>
+						<!-- <button class="uvod1-contact-button" onclick="location.href='indexKontakt.html#id-kontakt-Deak,id-kontakt-Kracala,id-kontakt-Ivaska'" lang-code="00129">Zavolajte</button> -->
 					</div>
 				</div>
 				<div class="uvod1-right-column">
