--- a/Block_Kontakt3.html
+++ b/Block_Kontakt3.html
@@ -32,7 +32,8 @@
 						<p>&nbsp;</p>
 					</div>
 					<div class="align-bottom">
-						<p>Ing. Lucia Hollá</p>
+						<!-- <p>Ing. Lucia Hollá</p> -->
+						<img src="media/Kontakt_enitech_LH.png" style="width:100%; height:auto; display:block;"/>
 						<p>holla@enitech.sk</p>
 					</div>
 				</div>
@@ -42,8 +43,9 @@
 						<p>&nbsp;</p>
 					</div>
 					<div class="align-bottom">
-						<p>Ing. Karol Deák</p>
-						<p>+421 XXX XXX XXX</p>
+						<!-- <p>Ing. Karol Deák</p>
+						<p>+421 XXX XXX XXX</p> -->
+						<img src="media/Kontakt_enitech_KD.png" style="width:100%; height:auto; display:block;"/>
 						<p>deak@enitech.sk</p>
 					</div>
 				</div>
@@ -52,8 +54,9 @@
 						<p lang-code="05054">.Externá konštrukcia a IT služby:</p>
 					</div>
 					<div class="align-bottom">
-						<p>Ing. Peter Kráčala</p>
-						<p>+421 XXX XXX XXX</p>
+						<!-- <p>Ing. Peter Kráčala</p>
+						<p>+421 XXX XXX XXX</p> -->
+						<img src="media/Kontakt_enitech_PK.png" style="width:100%; height:auto; display:block;"/>
 						<p>kracala@enitech.sk</p>
 					</div>
 				</div>
@@ -62,8 +65,9 @@
 						<p lang-code="05055">.Externá konštrukcia a IT služby:</p>
 					</div>
 					<div class="align-bottom">
-						<p>Ing. Jaroslav Ivaška</p>
-						<p>+421 XXX XXX XXX</p>
+						<!-- <p>Ing. Jaroslav Ivaška</p>
+						<p>+421 XXX XXX XXX</p> -->
+						<img src="media/Kontakt_enitech_JI.png" style="width:100%; height:auto; display:block;"/>
 						<p>ivaska@enitech.sk</p>
 					</div>
 				</div>
