--- a/Block_EnginElekt1.html
+++ b/Block_EnginElekt1.html
@@ -48,9 +48,8 @@
                 <strong>EPLAN P8</strong> pri návrhu, plánovaní a optimalizácii 
                 elektrotechniky do Vašich strojov a zariadení </p>
               <p><span lang-code="01603">Disponujeme tiež skúsenosťami pre návrh dosiek
-                 plošných spojov(</span>
-                 <strong lang-code="01604">PCB  dizajn</strong>
-                 <span>).</span></p>
+                 plošných spojov(</span><strong lang-code="01604">PCB  dizajn</strong><span>).</span>
+			  </p>
             <div class="enginelekt1-more-info-container">
               <a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="01605" style="
                 --text-color: #a8cfff;
