--- a/Block_EnginInt1.html
+++ b/Block_EnginInt1.html
@@ -28,7 +28,7 @@
 	<div id="EnginInt1-div-src">
 		<div class="enginint1-body">
 			<div class="enginint1-header-line"></div>
-			<p class="enginint1-great-p" lang-code="01101">Spoľahlivá a efektívna podpora v oblasti konštrukčných prác doma aj v zahraničí.</p>
+			<!-- <p class="enginint1-great-p" lang-code="01101">Spoľahlivá a efektívna podpora v oblasti konštrukčných prác doma aj v zahraničí.</p> -->
 
 			<div class="enginint1-content">
 				<div class="enginint1-left">
