--- a/Block_EnginInt2.html
+++ b/Block_EnginInt2.html
@@ -37,7 +37,7 @@
 					<div class="enginint2-line-with-img">
 						<h2 lang-code="01201">Interná konštrukcia</h2>
 						<!-- <img src="media/Lietadielko.png" alt="Ikona lietadielka"> -->
-						<img src="media/IkonaObrabaciehoStroja.png" alt="Ikona obrabacieho stroja">
+						<img src="media/Lietadielko.png" alt="Ikona obrabacieho stroja">
 					</div>
 					<p>
 						<strong lang-code="01202">Projekty montážnych plošín</strong>
@@ -59,7 +59,7 @@
 
 				<div class="enginint2-right">
 					<div class="enginint2-img-wrapper">
-						<img src="media/MontaznaPlosinaDouble.avif" alt="Obrazok" />
+						<img src="media/DvojitaPlosina_Huebsch.avif" alt="Obrazok" />
 					</div>
 
 					<!-- <div class="enginint2-right-group ">
