--- a/Block_EnginInt3.html
+++ b/Block_EnginInt3.html
@@ -35,7 +35,7 @@
 			<div class="enginint3-content">
 				<div class="enginint3-left">
 					<div class="enginint3-img-wrapper">
-						<img src="media/InternaKonstrukcia-prechod.avif"/>
+						<img src="media/RobotickaRuka_dopravnik_blue.avif"/>
 					</div>
 				</div>
 
@@ -46,7 +46,7 @@
 						<!-- <h3 lang-code="01301">Interná konštrukcia</h3> -->
 						 <strong lang-code="01302">Komplexné návrhy</strong>
 						<!-- <img src="media/Auticko.png" alt="Ikona auticka"> -->
-						<img src="media/IkonaObrabaciehoStroja.png" alt="Ikona obrabacieho stroja">
+						<img src="media/car-icon.png" alt="Ikona auticka">
 					</div>
 					<!-- <p>
 						<strong lang-code="01302">Komplexné návrhy</strong>
