--- a/Block_Kontakt2.html
+++ b/Block_Kontakt2.html
@@ -22,16 +22,16 @@
 	<div id="kontakt2-div-src">
 		<div class="kontakt2-body">
 			<div class="kontakt2-line"></div>
-			<h3 lang-code="05041">.Kontaktujte nás</h3>
+			<!-- <h3 lang-code="05041">.Kontaktujte nás</h3> -->
 			<div id="id-kontakt2-animate-content" style="transform-style: preserve-3d; transform: rotateX(-90deg) rotateY(10deg);">
 				<h1 lang-code="05042">.Kde nás nájdete</h1>
 			</div>
 
 			<div class="kontakt2-wrapper">
-				<div class="kontakt2-left">
+				<div class="kontakt2-map-wrapper">
 					<div id="id-kontakt2-map" class="kontakt2-map"></div>
 				</div>
-				<div class="kontakt2-right">
+				<div class="kontakt2-grid-wrapper">
 					<div class="kontakt2-grid" id="kontakt2-grid"></div>
 				</div>
 			</div>
