--- a/Block_Kontakt3.html
+++ b/Block_Kontakt3.html
@@ -34,7 +34,7 @@
 					<div class="align-bottom">
 						<!-- <p>Ing. Lucia Hollá</p> -->
 						<img src="media/Kontakt_enitech_LH.png" style="width:100%; height:auto; display:block;"/>
-						<p>holla@enitech.sk</p>
+						<!-- <p>holla@enitech.sk</p> -->
 					</div>
 				</div>
 				<div class="kontakt3-cell align-top" id="id-kontakt-Deak">
@@ -46,7 +46,7 @@
 						<!-- <p>Ing. Karol Deák</p>
 						<p>+421 XXX XXX XXX</p> -->
 						<img src="media/Kontakt_enitech_KD.png" style="width:100%; height:auto; display:block;"/>
-						<p>deak@enitech.sk</p>
+						<!-- <p>deak@enitech.sk</p> -->
 					</div>
 				</div>
 				<div class="kontakt3-cell align-top" id="id-kontakt-Kracala">
@@ -57,7 +57,7 @@
 						<!-- <p>Ing. Peter Kráčala</p>
 						<p>+421 XXX XXX XXX</p> -->
 						<img src="media/Kontakt_enitech_PK.png" style="width:100%; height:auto; display:block;"/>
-						<p>kracala@enitech.sk</p>
+						<!-- <p>kracala@enitech.sk</p> -->
 					</div>
 				</div>
 				<div class="kontakt3-cell align-top" id="id-kontakt-Ivaska">
@@ -68,7 +68,7 @@
 						<!-- <p>Ing. Jaroslav Ivaška</p>
 						<p>+421 XXX XXX XXX</p> -->
 						<img src="media/Kontakt_enitech_JI.png" style="width:100%; height:auto; display:block;"/>
-						<p>ivaska@enitech.sk</p>
+						<!-- <p>ivaska@enitech.sk</p> -->
 					</div>
 				</div>
 			</div>
@@ -97,7 +97,7 @@
 				<p><span class="label" lang-code="05062">IČO:</span><span class="value">45 468 397</span></p>
 				<p><span class="label" lang-code="05063">IČ DPH:</span><span class="value">SK 2023009076</span></p>
 				<div class="line-gap"></div>
-				<p><span class="label" lang-code="05064">Bankové spojenie:</span><span class="value" lang-code="05065">Slovenská sporiteľňa, a. s., Nová Dubnica</span><p>
+				<p><span class="label" lang-code="05064">Bankové spojenie:</span><span class="value" lang-code="05065">Slovenská sporiteľňa, a. s.</span><p>
 				<p><span class="label" lang-code="05066">Číslo účtu:</span><span class="value">SK07 0900 0000 0003 6448 6398</span></p>
 				<p><span class="label" lang-code="05067">Registrácia:</span>
 					<span class="value" lang-code="05068">Zapísaný v Obchodnom registri Okresného súdu v Trenčíne, oddiel: Sro, vložka 22788/R</span>
