--- a/Block_Manage.html
+++ b/Block_Manage.html
@@ -25,14 +25,16 @@
         <div class="manage-text">
           <p lang-code="06013">.Poskytujeme odborníkov pre riadenie a koordináciu projektov:</p>
           <ul class="manage-bullets">
-            <li lang-code="06014"><strong>.projektových manažérov</strong></li>
-            <li lang-code="06015"><strong>.manažérov požiadaviek</strong></li>
+            <li><strong lang-code="06014">.projektových manažérov</strong></li> 
+            <li><strong lang-code="06015">.manažérov požiadaviek</strong></li> 
             <li lang-code="06016"><strong>.manažérov riadenia kvality</strong> (Quality Assurance/Q.Management)</li>
             <li lang-code="06017"><strong>.Scrum Master</strong> špecialistov</li>
             <li lang-code="06018">.špecialistov na <strong>dátový manažment</strong></li>
+            <li><strong lang-code="06019">.Procesní manažéri/audítori</strong></li>
+            <li><strong lang-code="06020">.Interní audítori</strong></li>
           </ul>
           <div class="manage-link">
-            <a href="indexKontakt.html#id-kontakt-Info" lang-code="06019" class="animate-text-underline" style="
+            <a href="indexKontakt.html#id-kontakt-Kracala" lang-code="06029" class="animate-text-underline" style="
                     --text-color: #a8cfff;
                     --hover-color: #ffffff;
                     --underline-color: #ffffff;">
