--- a/Block_Onas2.html
+++ b/Block_Onas2.html
@@ -46,6 +46,7 @@
 						</p>
 						<img src="media/CertificatedPQM.png" alt="Certificate PQM" class="onas2-official-stamp" id="idCertificateBtn">
 					</div>
+					<p class="onas2-official-stamp-info" lang-code="00216">Certifikát</p>
 				</div>
 
 				<div class="onas2-right">
