--- a/Block_Ref.html
+++ b/Block_Ref.html
@@ -56,7 +56,7 @@
 
 				<div class="ref-col">
 					<div class="ref-p1">
-						<img src="media/TriEskalatory.avif" alt="Všeobecné strojárstvo" />
+						<img src="media/TrojityEskalator_MetroCityCenter.avif" alt="Všeobecné strojárstvo" />
 						<div class="ref-triangle"></div>
 					</div>
 					<div class="ref-t1">
@@ -72,7 +72,7 @@
 					<div class="ref-t2">
 						<div class="ref-text">
 							<h2 lang-code="07015">.IT oblasť</h2>
-							<span lang-code="07016">.Automatizácia procesov, monitoring, a správa dát</span>
+							<span lang-code="07016">Vývoj HW, SW a aplikácií, testovanie, DB programovanie, atď.</span>
 							<a href="indexRef.html#id-Block_Ref4" class="ref-button" lang-code="07021">Viac</a>
 						</div>
 					</div>
@@ -82,7 +82,7 @@
 					</div>
 				</div>
 
-				<div class="ref-col">
+				<!-- <div class="ref-col">
 					<div class="ref-p1">
 						<img src="media/ai-robot-interacting-with-futuristic-data-interface.avif" alt="Robot" />
 						<div class="ref-triangle"></div>
@@ -94,14 +94,13 @@
 							<a href="indexRef.html#id-Block_Ref5" class="ref-button" lang-code="07021">Viac</a>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 			</div>
 		</div>
 	</div>
 	<script>
 		document.addEventListener("DOMContentLoaded", async () => {
-			// Načítanie prekladov po načítaní DOM
 			await LoadTranslations('translations07-ref.txt');
 			await UpdateTexts();
 		});
