--- a/Block_Ref2.html
+++ b/Block_Ref2.html
@@ -69,8 +69,9 @@
 						</div>
 
 						<div class="ref-tooltip-container">
-							<img src="media/klienti/SAB_aerospace-transp.png" alt="SAB AEROSPACE logo" class="ref-tooltip-image" 
-								style="top: 50%; bottom: auto; transform: translateY(-50%);" />
+							<!-- <img src="media/klienti/SAB_aerospace-transp.png" alt="SAB AEROSPACE logo" class="ref-tooltip-image" 
+								style="top: 50%; bottom: auto; transform: translateY(-50%);" /> -->
+							<img src="media/klienti/SAB_aerospace-transp.png" alt="SAB AEROSPACE logo" class="ref-tooltip-image"/>
 							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
 								<p>komponenty pre vesmírny priemysel</p>
@@ -88,6 +89,9 @@
 						</div>
 
 					</div>
+					<div style="text-align: right;">
+						<a href="#id_refMenu" lang-code="07022">Hore k menu</a>
+					</div>
 				</div>
 
 				<div class="ref2-divider"></div>
@@ -97,9 +101,6 @@
 						<img src="media/Copilot_ModreLietadlo3D_future.avif" class="ref2-img1" />
 						<!-- <img src="media/Aeroplan-spredu.avif" class="ref2-img1" /> -->
 						<!-- <img src="media/ai-generated-commercial-airplane-flying-through-the-clouds.avif" class="ref2-img1" /> -->
-					</div>
-					<div style="text-align: right;">
-						<a href="#id_refMenu" lang-code="07022">Hore k menu</a>
 					</div>
 				</div>
 
