--- a/indexOnas.html
+++ b/indexOnas.html
@@ -105,6 +105,7 @@
 			Animator.registerAll(".onas2-header-line", "animate-width-grow");
 			Animator.registerAll(".onas3ref-header-line", "animate-width-grow");
 			Animator.registerAll(".footer-line", "animate-width-grow");
+			Animator.register("#idCertificateBtn", "animate-shake");
 			onas2_initModal();
 			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
 			document.body.style.visibility = "visible";
