--- a/indexRef.html
+++ b/indexRef.html
@@ -78,9 +78,6 @@
 	<div id="Ref4-div-dst">
 	</div>
 
-	<div id="Ref5-div-dst">
-	</div>
-
 	<div id="Footer-div-dst">
 	</div>
 
@@ -95,9 +92,8 @@
 			const p4 = ImportDiv("Block_Ref2.html", "Ref2-div-src", "Ref2-div-dst");
 			const p5 = ImportDiv("Block_Ref3.html", "Ref3-div-src", "Ref3-div-dst");
 			const p6 = ImportDiv("Block_Ref4.html", "Ref4-div-src", "Ref4-div-dst");
-			const p7 = ImportDiv("Block_Ref5.html", "Ref5-div-src", "Ref5-div-dst");
-			const p8 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-			await Promise.all([p1, p2, p3, p4, p5, p6, p7, p8]);
+			const p7 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
+			await Promise.all([p1, p2, p3, p4, p5, p6, p7]);
 		}
 	</script>
 
